<resources>
    <string name="app_name">Soccer Scheduler</string>
    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>user_friends</item>
    </string-array>
    <string name="venueName">Venue Name</string>
    <string name="venueLoc">Venue Location</string>
    <string name="venueAddress">Venue Address</string>
    <string name="tempLogin">To Login Screen</string>
    <string name="tempEnter">To Main Application</string>
    <string name="tempDesc">This is a temporary screen that will be removed once Logins are enabled.
    Please use the buttons below to see the login screen and enter the application.</string>
    <string name="numFields">Full size fields: </string>
    <string name="vs">vs.</string>
    <string name="upcoming">Upcoming games:</string>
    <string name="gameDateDesc">Game Date: </string>
    <string name="gameHomeDesc">Home Team: </string>
    <string name="gameAwayDesc">Away Team: </string>
    <string name="gameFieldDesc">Field #: </string>
    <string name="gameCenterDesc">Center: </string>
    <string name="gameAR1Desc">AR1: </string>
    <string name="gameAR2Desc">AR2: </string>
    <string name="game4thDesc">4th: </string>
    <string name="refHead">Referees</string>
    <string name="acceptAssignment">Accept Game</string>
    <string name="rejectAssignment">Reject Game</string>
    <string name="editGame">Edit Game</string>
    <string name="deleteGame">Delete Game</string>
    <string name="editAssignments">Edit Assignments</string>
    <string name="save">Save</string>
    <string name="action_add">Add</string>
</resources>
